fixed scrollbar problem

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -152,7 +152,7 @@
       /*position: absolute;*/
   }
   div[id="enter"] {
-      /*position: absolute;*/
+      position: relative;
       display: inline-block;
       padding: 10px;
       border: 2px solid black;
@@ -168,9 +168,8 @@
       margin: 0% 40%;
   }
   div[id="wrapper"] {
-      display: inline-block;
+      /*display: inline-block;*/
       width: 2400px;
-      height: 400px;
       margin: 0% 25%;
   }
   div[id="gameField"] {
